--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,10 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <script defer data-domain="clicker.lion.computer" data-api="https://lively-dew-5ace.nicole-bda.workers.dev/api/event"
+    src="https://lively-dew-5ace.nicole-bda.workers.dev/js/script.js"></script>
+
 </body>
 
 </html>
